give floating effect to the '10 year badge' container

--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,9 @@ nav a {
   align-items: center;
   padding: 30px;
   width: 257px;
+  position: relative;
+  bottom: 50px;
+  left: -50px;
 }
 
 .ten-year-badge h2 {
