--- a/styles/style.css
+++ b/styles/style.css
@@ -280,6 +280,12 @@ nav a {
 /* tablet and medium devices */
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
+  nav {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .teams-container {
     display: grid;
     grid-template-columns: 1fr;
